Configured `KotlinCompile` with `--enable-preview` for Panama build