@@ -5,6 +5,7 @@ import org.gradle.api.tasks.compile.JavaCompile
 import org.gradle.kotlin.dsl.configure
 import org.gradle.kotlin.dsl.create
 import org.gradle.kotlin.dsl.withType
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 const val NETRUNE_DEFAULT_GROUP = "org.jire.netrune"
 const val NETRUNE_DEFAULT_VERSION = "0.1.0-SNAPSHOT"
@@ -19,6 +20,12 @@ internal fun Project.netrune() {
     tasks.withType<JavaCompile>().configureEach {
         options.encoding = "UTF-8"
         options.compilerArgs = mutableListOf("--enable-preview")
+    }
+
+    tasks.withType<KotlinCompile>().configureEach {
+        compilerOptions {
+            freeCompilerArgs.add("--enable-preview")
+        }
     }
 
     val javaComponent = components.findByName("java") ?: return
